<?xml version="1.0"?>
<package>
  <name>nanoflann</name>
  <version>1.2.3</version>
  <description>
    nanoflann: a C++11 header-only library for Nearest Neighbor (NN) search with KD-trees.
  </description>
  <maintainer email="devops@vicarious.com">The Vicarious DevOps Team</maintainer>
  <license>BSD</license>

  <!-- General dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>eigen</run_depend>
</package>
